# PROJEKTS-WORK

./: .gitignore  CODEX_GENERATION_PROMPT.md  DETAILED_AUDIT_AND_CODEX_PROMPT.md  Makefile  NN_GENERATED_CHECKLIST.md  NN_IMPLEMENTATION_GUIDE.md  NN_TASKS.json  README.md  REPOSITORY_AUDIT_REPORT.md  RUN_DEMO.md  _jjjkk.txt  _nn.txt  _rr.txt  _yy.txt  docs_REPO_AUDIT.md  run_all_demos.sh  setup.sh  stop_all_demos.sh  tests_test_generate_from_nn.sh  tests_test_nn_build.sh  verify_all_ports.sh  wed_may_20_2026_project_audit_and_code_generation_plan (1).md
cloudbudget/: .env  .env.example  NN_IMPLEMENTATION_PLAN.md  README.md  docker-compose.yml  pyproject.toml
cloudbudget/agents/: aws_agent.py  azure_agent.py  base_agent.py  gcp_agent.py  kubernetes_agent.py  main.py  onprem_agent.py
cloudbudget/analytics/: duckdb_manager.py  main.py  polars_transforms.py
cloudbudget/api/: Dockerfile  main.py  requirements.txt
cloudbudget/docs/: PROJECT_SCOPE.md
cloudbudget/frontend/: Dockerfile  package.json
cloudbudget/ml/: anomaly_detector.py  mlflow_config.py  prophet_forecaster.py
cloudbudget/monitoring/: prometheus_rules.yml
cloudbudget/scripts/: bootstrap_demo_data.py  init_db.py  init_duckdb.py  seed_data.py  setup.sh  setup_local_demo.sh
cloudbudget/tests/: test_action_persistence.py  test_agents.py  test_analytics_ml.py  test_api_endpoints.py  test_auth.py  test_autopilot.py  test_chargeback.py  (+19 more)
netguardian/: .env  .env.example  NN_IMPLEMENTATION_PLAN.md  README.md  docker-compose.demo.yml  docker-compose.override.yml  docker-compose.yml  pyproject.toml
(+322 files in other folders)
