[project]
name = "netguardian"
version = "1.0.0"
description = "Network threat detection and response engine"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.104.1",
  "uvicorn[standard]==0.24.0",
  "confluent-kafka==2.3.0",
  "redis==5.0.1",
  "duckdb==0.9.2",
  "pydantic==2.5.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
